--- a/微博数据库.md
+++ b/微博数据库.md
@@ -1,14 +1,21 @@
-#旧浪微博 数据库文件 
-##user表
-	id 主键
+#旧浪微博 
+##register 注册表
+	id
+	user_id 用户id
+	email 用户邮箱
+	password 用户密码
+	nickname 用户昵称
+	register_time 注册时间
+##userinfo表 用户详情信息表
+	id 
     user_id 用户id
-    login_name登录名
+    nickname 用户昵称
     password 密码
     email  邮箱
-    nickname 用户昵称
     phone 手机
     age  年龄
     sex 性别
+	sexual 性取向 
 	picname 头像
 	birthday 生日
     address 详细地址
@@ -16,79 +23,51 @@
     status 用户状态
     register_time 注册时间
     QQ  QQ
-##关注表 follow
-    id  关注表主键
-    user_id     用户id
-    concern_id 关注用户id
-##msg微博表
-	id 主键
-	msg_id 微博id
-    user_id 作者id
+##关注 粉丝表 follow
+    user_id   用户id
+	suser_id被关注人id
+	Follow_count 关注人数量
+	fans_count 粉丝数量
+##微博内容表 message
+	user_id 发布者id
+	message_id 微博消息id
     content  内容
 	picname 图片
-    publish_time  发表时间
-    comment_count  评论数
     praise_count 点赞数
     foward_count 转发数
-##文章表 article
-	标题 title
-	发布者	name
-	发布时间	time
-##forward 转发微博表
-	id 主键
-    content_id 转发消息ID
-    user_id  转发人id
-    msg_id 转发微博id
-    forward_msg 转发感言
-
-## 收藏微博表 collection
-	id  主键
-	msg_id 微博id
-    location_id 转发表主键
-    user_id  收藏人id
-    msg_id 收藏文章id
-##评论表 comment
-	id 主键
-    msg_id 所评论的微博ID
-    user_id 评论人用户ID
-    comment_content评论内容
-##内容表 content
-	id 主键
-	msg_id 微博id
-	content 内容
-	status 内容状态
-##友情链接 link
-	id 主键
+	onclicknum 点击数
+    publish_time  发表时间
+	status 状态
+## 转发微博表  forward
+	user_id  被转发发布者id
+    message_id 被转发微博id
+	su_id 转发用户
+##评论表  Comments
+    message_id 所评论的微博ID
+    user_id 评论用户ID
+	Comments_id评论内容id(删除评论用)
+    Comments_content评论内容 
+	Comments_time 评论时间
+##友情链接 url
+	id
 	url 链接地址
-	image  图片
-
-##管理员 admin
-	id  主键
-	login_name登录名
-    password 密码
-    email  邮箱
-    nickname 用户昵称
-	phone 手机
-    age  年龄
-    sex 性别
-	picname 头像
-	birthday 生日
-    address 详细地址
-	name 用户姓名
-    status 用户状态
-    register_time 注册时间
-    QQ  QQ
-	group_id   部门ID
-##部门  group
+##管理员信息 admin 
+	admin_name 管理员名称
+	admin_id 管理员id
+	admin_password 管理员密码
+	admin_time 管理员添加时间	
+	admin_phone   管理员联系方式
+##管理员权限  privileges
 	id
-	group_id
-	name	部门名
-	privileges_id   部门所有权限
-##权限  privileges
-	id
-	privileges_id
 	title   权限描述
+##部门 department
+	id
+	title  部门名
+	pricileges_id 权限id
 	
 	
 	
+	
+
+
 	
