--- a/微博数据库(1).md
+++ b/微博数据库(1).md
@@ -1,8 +1,7 @@
 #旧浪微博 
 ##register 注册表
 	id
-	user_id 用户id
-	email 用户邮箱
+	phone 用户邮箱
 	password 用户密码
 	nickname 用户昵称
 	register_time 注册时间
@@ -22,10 +21,11 @@
 	name 用户姓名
     status 用户状态
     register_time 注册时间
-    QQ  QQ
+   
 ##关注 粉丝表 follow
-    user_id   用户id
-	suser_id被关注人id
+    id      用户id
+    suser_id   关注人id
+	user_id被关注人id
 	Follow_count 关注人数量
 	fans_count 粉丝数量
 ##微博内容表 message
@@ -42,15 +42,29 @@
 	user_id  被转发发布者id
     message_id 被转发微博id
 	su_id 转发用户
+    forward_time 转发时间
+    forward_content 转发内容
 ##评论表  Comments
     message_id 所评论的微博ID
     user_id 评论用户ID
+    nickname 昵称
 	Comments_id评论内容id(删除评论用)
     Comments_content评论内容 
 	Comments_time 评论时间
+    status 状态
+##回复表 reply
+	reply_id 回复id
+	cname 被回复人姓名
+	uname 回复人姓名
+	user_id	回复人id
+	comments_id	回复评论id
+	reply_content 回复内容
+	reply_time 回复时间
 ##友情链接 url
 	id
+    urlname 链接名称
 	url 链接地址
+    url_picname 图片
 ##管理员信息 admin 
 	admin_name 管理员名称
 	admin_id 管理员id
@@ -60,10 +74,14 @@
 ##管理员权限  privileges
 	id
 	title   权限描述
-##部门 department
-	id
-	title  部门名
-	privileges_id 权限id
+    method  提交方式
+    url  路径
+    state 状态 
+##反馈建议表 opinion
+	opinion_id 用户id 
+	opinion_content 建议内容
+	opinion_time 提交建议时间
+	
 	
 	
 	
